--- a/src/static/global.css
+++ b/src/static/global.css
@@ -1,6 +1,46 @@
+* {
+  --color-green-white: #FAFCFA;
+  --color-green-black: #04100C;
+  --color-green-7: #173A2C;
+  --color-green-6: #2B644A;
+  --color-green-5: #38805F;
+  --color-green-4: #48AD7E;
+  --color-green-3: #6EC499;
+  --color-green-2: #99D6B5;
+  --color-green-1: #C4E9D1;
+}
+
+html,
+body,
+#root {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
+  position: relative;
+  font-size: 18px;
+  background-color: var(--color-green-white);
+  font-family: 'Tahoma', sans-serif;
+  color: var(--color-gree-black);
+}
+
 a {
+  color: var(--color-green-6);
   text-decoration: none;
-  &:visited {
-    color: #5acf;
+  &:hover,
+  &:active,
+  &:visited,
+  &:focus {
+    text-decoration: underline;
   }
 }
+
+.center {
+  text-align: center;
+}
+
+.ipa {
+  font-family: 'DoulosSILW', sans-serif;
+}
+
