--- a/src/front/common/common.scss
+++ b/src/front/common/common.scss
@@ -1,54 +1,15 @@
-$header-height: 50px;
-$nav-width: 200px;
-
-.Common__Header {
-  width: 100%;
-  height: $header-height;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid var(--color-green-2);
-
-  &__Logo {
-    font-size: calc($header-height * 0.6);
-    width: $nav-width;
-    text-align: center;
-  }
-
-  &__Languages {
-    right: 0px;
-    margin-top: calc($header-height * 1/4);
-    margin-right: calc($header-height * 1/3);
-
-    &>a>img {
-      height: calc($header-height * 1/2);
-      padding-left: calc($header-height * 1/4);
-    }
-  }
-}
-
-.Common__Nav {
-  width: $nav-width;
-  border-right: 1px solid var(--color-green-2);
-  height: calc(100vh - $header-height - 1px);
-  text-align: center;
-
-  &__Link {
-    display: inline-block;
-    height: 30px;
-    width: 100%;
-
-    &--selected {
-      background-color: var(--color-green-1);
-    }
-  }
-}
+@use '../variables.scss';
 
 .Common__Container {
   display: flex;
 }
 
 .Common__Main {
-  width: calc(100% - 1px - $nav-width);
+  width: calc(100% - 1px - variables.$nav-width);
   text-align: center;
   overflow-y: auto;
+
+  @media (max-width: variables.$mobile-breakpoint) {
+    width: 100%;
+  }
 }
