--- a/src/static/global.css
+++ b/src/static/global.css
@@ -44,3 +44,13 @@ a {
   font-family: 'DoulosSILW', sans-serif;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
