--- a/src/front/common/header.scss
+++ b/src/front/common/header.scss
@@ -7,13 +7,23 @@
   justify-content: space-between;
   border-bottom: 1px solid var(--color-green-2);
 
+  @media (width > variables.$mobile-breakpoint) {
+    position: sticky;
+    top: 0;
+    border-bottom: unset;
+  }
+
   &__Logo {
     font-size: calc(variables.$header-height * 0.6);
     width: variables.$nav-width;
     text-align: center;
 
-    @media (max-width: variables.$mobile-breakpoint) {
+    @media (width <= variables.$mobile-breakpoint) {
       width: 100%;
+    }
+
+    @media (width > variables.$mobile-breakpoint) {
+      border-right: 1px solid var(--color-green-2);
     }
   }
 
@@ -28,7 +38,7 @@
         padding-left: calc(variables.$header-height * 1/4);
       }
 
-      @media (max-width: variables.$mobile-breakpoint) {
+      @media (width <= variables.$mobile-breakpoint) {
         display: none;
       }
     }
@@ -36,7 +46,7 @@
     &--mobile {
       display: none;
 
-      @media (max-width: variables.$mobile-breakpoint) {
+      @media (width <= variables.$mobile-breakpoint) {
         display: block;
         position: absolute;
         right: 0;
