--- a/src/front/common/nav.scss
+++ b/src/front/common/nav.scss
@@ -6,14 +6,19 @@
   height: calc(100vh - variables.$header-height - 1px);
   text-align: center;
 
-  @media (max-width: variables.$mobile-breakpoint) {
+  @media (width > variables.$mobile-breakpoint) {
+    top: variables.$header-height + 1px;
+    position: sticky;
+  }
+
+  @media (width <= variables.$mobile-breakpoint) {
     display: none;
   }
 
   &__Hamburger {
     display: none;
 
-    @media (max-width: variables.$mobile-breakpoint) {
+    @media (width <= variables.$mobile-breakpoint) {
       display: block;
       font-size: calc(variables.$header-height * 0.6);
       position: absolute;
@@ -31,7 +36,7 @@
       background-color: var(--color-green-1);
     }
 
-    @media (max-width: variables.$mobile-breakpoint) {
+    @media (width <= variables.$mobile-breakpoint) {
       height: 40px;
     }
   }
