--- a/src/front/baltistics/Baltistics.module.scss
+++ b/src/front/baltistics/Baltistics.module.scss
@@ -1,10 +1,3 @@
-@use 'sass:string';
-
-$uniqueId: unique-id();
-/* #{$uniqueId} */
-
-._#{$uniqueId} {
-  &_tbc {
-    font-style: italic;
-  }
+.tbc {
+  font-style: italic;
 }
