--- a/src/front/common/dialog.module.scss
+++ b/src/front/common/dialog.module.scss
@@ -1,41 +1,36 @@
-$uniqueId: unique-id();
-/* #{$uniqueId} */
+.dialog {
+  max-width: none !important;
+  max-height: none !important;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-green-white);
+  border: 0;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 25px;
+}
 
-._#{$uniqueId} {
-  &_dialog {
-    max-width: none !important;
-    max-height: none !important;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--color-green-white);
-    border: 0;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    font-size: 25px;
-  }
+.content {
+  position: relative;
+  display: block;
+  margin-top: 75px;
+  text-align: center;
+}
 
-  &_content {
-    position: relative;
-    display: block;
-    margin-top: 75px;
-    text-align: center;
-  }
-
-  &_close {
-    position: absolute;
-    display: block;
-    top: 20px;
-    left: calc(100vw - 60px);
-    background-color: red;
-    color: white;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    border-radius: 50%;
-    border-width: 0;
-    cursor: pointer;
-    font-size: 20px;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-  }
+.close {
+  position: absolute;
+  display: block;
+  top: 20px;
+  left: calc(100vw - 60px);
+  background-color: red;
+  color: white;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  border-width: 0;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
