--- a/src/front/common/nav.module.scss
+++ b/src/front/common/nav.module.scss
@@ -1,50 +1,44 @@
 @use '../variables.scss';
-@use 'sass:string';
 
-$uniqueId: unique-id();
-/* #{$uniqueId} */
+.nav {
+  width: variables.$nav-width;
+  border-right: 1px solid var(--color-green-2);
+  $height: variables.$header-height + 1px;
+  height: calc(100vh - $height);
+  text-align: center;
 
-._#{$uniqueId} {
-
-  &_nav {
-    width: variables.$nav-width;
-    border-right: 1px solid var(--color-green-2);
-    height: calc(100vh - variables.$header-height - 1px);
-    text-align: center;
-
-    @media (width > variables.$mobile-breakpoint) {
-      top: variables.$header-height + 1px;
-      position: sticky;
-    }
-
-    @media (width <= variables.$mobile-breakpoint) {
-      display: none;
-    }
+  @media (width > variables.$mobile-breakpoint) {
+    top: variables.$header-height + 1px;
+    position: sticky;
   }
 
-  &_hamburger {
+  @media (width <= variables.$mobile-breakpoint) {
     display: none;
+  }
+}
 
-    @media (width <= variables.$mobile-breakpoint) {
-      display: block;
-      font-size: calc(variables.$header-height * 0.6);
-      position: absolute;
-      top: 0;
-      cursor: pointer;
-    }
+.hamburger {
+  display: none;
+
+  @media (width <= variables.$mobile-breakpoint) {
+    display: block;
+    font-size: variables.$header-height * 0.6;
+    position: absolute;
+    top: 0;
+    cursor: pointer;
+  }
+}
+
+.link {
+  display: inline-block;
+  height: 30px;
+  width: 100%;
+
+  &--selected {
+    background-color: var(--color-green-1);
   }
 
-  &_link {
-    display: inline-block;
-    height: 30px;
-    width: 100%;
-
-    &--selected {
-      background-color: var(--color-green-1);
-    }
-
-    @media (width <= variables.$mobile-breakpoint) {
-      height: 40px;
-    }
+  @media (width <= variables.$mobile-breakpoint) {
+    height: 40px;
   }
 }
