make elements in nav on mobile screen more accessible

--- a/src/front/common/nav.module.scss
+++ b/src/front/common/nav.module.scss
@@ -25,6 +25,7 @@
     font-size: variables.$header-height * 0.6;
     position: absolute;
     top: 0;
+    padding-left: 10px;
     cursor: pointer;
   }
 }
