--- a/src/front/common/dialog.module.scss
+++ b/src/front/common/dialog.module.scss
@@ -21,16 +21,12 @@
 .close {
   position: absolute;
   display: block;
-  top: 20px;
-  left: calc(100vw - 60px);
-  background-color: red;
-  color: white;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  border-radius: 50%;
-  border-width: 0;
+  top: 10px;
+  left: calc(100vw - 40px);
+  width: 25px;
+  height: 25px;
   cursor: pointer;
-  font-size: 20px;
-  font-family: 'Helvetica', 'Arial', sans-serif;
+  background: transparent;
+  border: none;
+  padding: 0;
 }
