add light-dark support

--- a/src/front/common/cancelSvg.module.scss
+++ b/src/front/common/cancelSvg.module.scss
@@ -1,6 +1,6 @@
 .style {
   line {
-  stroke: black;
+  stroke: light-dark(var(--color-green-black), var(--color-green-black-dark));
   stroke-width: 4;
   }
 }
