--- a/src/front/common/body.module.scss
+++ b/src/front/common/body.module.scss
@@ -15,6 +15,6 @@
   }
 
   @media (width > variables.$mobile-breakpoint) {
-    border-top: 1px solid var(--color-green-2);
+    border-top: 1px solid light-dark(var(--color-green-2), var(--color-green-6));
   }
 }
