--- a/src/front/common/header.module.scss
+++ b/src/front/common/header.module.scss
@@ -6,7 +6,7 @@
   height: variables.$header-height;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid var(--color-green-2);
+  border-bottom: 1px solid light-dark(var(--color-green-2), var(--color-green-6));
 
   @media (width > variables.$mobile-breakpoint) {
     position: sticky;
@@ -56,6 +56,6 @@
   }
 
   @media (width > variables.$mobile-breakpoint) {
-    border-right: 1px solid var(--color-green-2);
+    border-right: 1px solid light-dark(var(--color-green-2), var(--color-green-6));
   }
 }
