--- a/src/front/common/nav.module.scss
+++ b/src/front/common/nav.module.scss
@@ -2,7 +2,8 @@
 
 .nav {
   width: variables.$nav-width;
-  border-right: 1px solid var(--color-green-2);
+  border-right: 1px solid;
+  border-color: light-dark(var(--color-green-2), var(--color-green-6));
   $height: variables.$header-height + 1px;
   height: calc(100vh - $height);
   text-align: center;
@@ -36,7 +37,7 @@
   width: 100%;
 
   &--selected {
-    background-color: var(--color-green-1);
+    background-color: light-dark(var(--color-green-1), var(--color-green-7));
   }
 
   @media (width <= variables.$mobile-breakpoint) {
