--- a/src/front/common/header.module.scss
+++ b/src/front/common/header.module.scss
@@ -37,11 +37,12 @@
     @media (width <= variables.$mobile-breakpoint) {
       display: block;
       position: absolute;
-      right: 0;
-
-      & > div {
-        cursor: pointer;
-      }
+      top: 8px;
+      right: 14px;
+      cursor: pointer;
+      font-weight: bold;
+      user-select: none;
+      font-size: 18px;
     }
   }
 }
